// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListWithFiltersLayout > renders 1`] = `
<DocumentFragment>
  <div
    class="group"
  >
    <a
      class="
          absolute top-0.5 left-1/2 z-skip-link mx-auto
          [transform:translate(-50%,calc(-100%-2px))]
          bg-subtle px-6 py-2 text-center text-accent
          focus:[transform:translate(-50%,0%)]
        "
      href="#content"
    >
      Skip to content
    </a>
    <div
      class="flex min-h-full w-full flex-col bg-default"
    >
      <header
        class="
        group z-30 flex w-full items-center justify-between px-container py-4
        tablet:py-6
        laptop:inset-x-0 laptop:z-40 laptop:flex-row laptop:flex-wrap
        laptop:px-16 laptop:py-8 laptop:text-left
      "
        style="background-image: linear-gradient(to bottom, rgba(0,0,0,.85), transparent 95%); color: rgb(255, 255, 255); position: absolute;"
      >
        <div
          class="
        flex transform-gpu flex-col transition-transform
        has-[a:hover]:scale-105
        
      "
        >
          <div
            class="
          text-[1.375rem] leading-8 font-normal whitespace-nowrap
          tablet:text-[1.5625rem]
        "
          >
            <a
              href="/"
            >
              Frank's Movie Log
            </a>
          </div>
          <p
            class="w-full pl-px text-sm leading-4 italic opacity-85"
          >
            by Frank Showalter
          </p>
        </div>
        <div
          class="flex items-center"
        >
          <nav
            class="
            hidden w-full
            laptop:block laptop:w-auto
          "
          >
            <ul
              class="flex flex-wrap justify-start gap-x-6 text-xl"
            >
              <li
                class="
        block leading-10 tracking-serif-wide whitespace-nowrap
        transition-transform
        has-[a:hover]:scale-105
        [body.nav-open_&]:opacity-0
      "
              >
                <a
                  class="relative text-inherit transition-colors"
                  href="/"
                  style="text-shadow: 1px 1px 2px black;"
                >
                  Home
                </a>
              </li>
              <li
                class="
        block leading-10 tracking-serif-wide whitespace-nowrap
        transition-transform
        has-[a:hover]:scale-105
        [body.nav-open_&]:opacity-0
      "
              >
                <a
                  class="relative text-inherit transition-colors"
                  href="/how-i-grade/"
                  style="text-shadow: 1px 1px 2px black;"
                >
                  How I Grade
                </a>
              </li>
              <li
                class="
        block leading-10 tracking-serif-wide whitespace-nowrap
        transition-transform
        has-[a:hover]:scale-105
        [body.nav-open_&]:opacity-0
      "
              >
                <a
                  class="relative text-inherit transition-colors"
                  href="/reviews/"
                  style="text-shadow: 1px 1px 2px black;"
                >
                  Reviews
                </a>
              </li>
              <li
                class="
        block leading-10 tracking-serif-wide whitespace-nowrap
        transition-transform
        has-[a:hover]:scale-105
        [body.nav-open_&]:opacity-0
      "
              >
                <a
                  class="relative text-inherit transition-colors"
                  href="/viewings/"
                  style="text-shadow: 1px 1px 2px black;"
                >
                  Viewing Log
                </a>
              </li>
              <li
                class="
        block leading-10 tracking-serif-wide whitespace-nowrap
        transition-transform
        has-[a:hover]:scale-105
        [body.nav-open_&]:opacity-0
      "
              >
                <a
                  class="relative text-inherit transition-colors"
                  href="/watchlist/"
                  style="text-shadow: 1px 1px 2px black;"
                >
                  Watchlist
                </a>
              </li>
            </ul>
          </nav>
          <div
            class="
        z-1000 transform-gpu transition-transform
        hover:scale-105
        [body.nav-open_&]:!text-[#fff]
      "
          >
            <button
              aria-keyshortcuts="Control+K"
              aria-label="Search"
              class="
          flex size-10 items-center justify-center overflow-hidden text-sm
          leading-6 ring-default
          laptop:ml-6
        "
              data-open-modal="true"
              disabled=""
              title="Search: Control+K"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="size-7"
                fill="none"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
          <div
            class="
          invisible fixed inset-0 bg-[rgba(0,0,0,.4)] opacity-0
          transition-opacity duration-200
          [body.nav-open_&]:tablet:visible
          [body.nav-open_&]:tablet:z-nav-backdrop
          [body.nav-open_&]:tablet:opacity-100
        "
            data-nav-backdrop="true"
          />
          <button
            aria-controls="nav-menu"
            aria-expanded="false"
            aria-label="Toggle navigation menu"
            class="
          relative z-40 ml-2 flex h-10 w-10 transform-gpu cursor-pointer
          items-center justify-center transition-transform
          hover:scale-110
        "
            data-nav-toggle="true"
            type="button"
          >
            <span
              aria-hidden="true"
              class="
            relative flex h-0.5 w-6 origin-center transform-gpu
            transition-[top,bottom,transform] duration-200 ease-in-out
            before:absolute before:-top-2 before:block before:h-0.5 before:w-6
            before:bg-inherit before:transition before:duration-200
            before:ease-in-out
            after:absolute after:-bottom-2 after:block after:h-0.5 after:w-6
            after:bg-inherit after:transition after:duration-200
            after:ease-in-out
            [body.nav-open_&]:transform-[rotate(45deg)]
            [body.nav-open_&]:!bg-[#fff] [body.nav-open_&]:before:top-0
            [body.nav-open_&]:before:transform-[rotate(90deg)]
            [body.nav-open_&]:after:bottom-0
            [body.nav-open_&]:after:transform-[rotate(90deg)]
          "
              style="background-color: rgb(255, 255, 255);"
            />
          </button>
          <nav
            aria-label="Main navigation"
          >
            <ul
              class="
            invisible fixed top-0 right-0 flex h-full w-0
            transform-[translateX(100%)] flex-col items-start gap-y-5
            overflow-hidden bg-footer text-left text-inverse opacity-0
            duration-200 ease-in-out
            tablet:max-w-[35vw] tablet:gap-y-10
            laptop:max-w-[25vw]
            [body.nav-open_&]:visible [body.nav-open_&]:bottom-0
            [body.nav-open_&]:z-nav-menu [body.nav-open_&]:h-full
            [body.nav-open_&]:w-full [body.nav-open_&]:transform-[translateX(0)]
            [body.nav-open_&]:overflow-y-auto [body.nav-open_&]:pt-20
            [body.nav-open_&]:pr-[16%] [body.nav-open_&]:pb-5
            [body.nav-open_&]:pl-[12%] [body.nav-open_&]:opacity-100
            [body.nav-open_&]:drop-shadow-2xl [body.nav-open_&]:tablet:px-10
            [body.nav-open_&]:tablet:pt-40 [body.nav-open_&]:laptop:px-20
          "
              data-nav-menu="true"
              id="nav-menu"
            >
              <li
                class="
        block w-1/2 text-2xl whitespace-nowrap
        laptop:w-full
      "
              >
                <a
                  class="
          inline-block origin-left transform-gpu transition-all
          hover:scale-105
        "
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                class="
        block w-1/2 text-2xl whitespace-nowrap
        laptop:w-full
      "
              >
                <a
                  class="
          inline-block origin-left transform-gpu transition-all
          hover:scale-105
        "
                  href="/how-i-grade/"
                >
                  How I Grade
                </a>
              </li>
              <li
                class="
        block w-1/2 text-2xl whitespace-nowrap
        laptop:w-full
      "
              >
                <a
                  class="
          inline-block origin-left transform-gpu transition-all
          hover:scale-105
        "
                  href="/reviews/"
                >
                  Reviews
                </a>
                <ol
                  class="mt-4"
                >
                  <li
                    class="
              mb-4 ml-1 font-sans text-xs tracking-wider text-inverse-subtle
              uppercase
              last:mb-0
            "
                  >
                    <a
                      class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                      href="/cast-and-crew/"
                    >
                      Cast & Crew
                    </a>
                  </li>
                  <li
                    class="
              mb-4 ml-1 font-sans text-xs tracking-wider text-inverse-subtle
              uppercase
              last:mb-0
            "
                  >
                    <a
                      class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                      href="/collections/"
                    >
                      Collections
                    </a>
                  </li>
                  <li
                    class="
              mb-4 ml-1 font-sans text-xs tracking-wider text-inverse-subtle
              uppercase
              last:mb-0
            "
                  >
                    <a
                      class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                      href="/reviews/overrated/"
                    >
                      Overrated
                    </a>
                  </li>
                  <li
                    class="
              mb-4 ml-1 font-sans text-xs tracking-wider text-inverse-subtle
              uppercase
              last:mb-0
            "
                  >
                    <a
                      class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                      href="/reviews/underrated/"
                    >
                      Underrated
                    </a>
                  </li>
                  <li
                    class="
              mb-4 ml-1 font-sans text-xs tracking-wider text-inverse-subtle
              uppercase
              last:mb-0
            "
                  >
                    <a
                      class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                      href="/reviews/underseen/"
                    >
                      Underseen
                    </a>
                  </li>
                </ol>
              </li>
              <li
                class="
        block w-1/2 text-2xl whitespace-nowrap
        laptop:w-full
      "
              >
                <a
                  class="
          inline-block origin-left transform-gpu transition-all
          hover:scale-105
        "
                  href="/viewings/"
                >
                  Viewing Log
                </a>
                <ol
                  class="mt-4"
                >
                  <li
                    class="
              mb-4 ml-1 font-sans text-xs tracking-wider text-inverse-subtle
              uppercase
              last:mb-0
            "
                  >
                    <a
                      class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                      href="/viewings/stats/"
                    >
                      Stats
                    </a>
                  </li>
                </ol>
              </li>
              <li
                class="
        block w-1/2 text-2xl whitespace-nowrap
        laptop:w-full
      "
              >
                <a
                  class="
          inline-block origin-left transform-gpu transition-all
          hover:scale-105
        "
                  href="/watchlist/"
                >
                  Watchlist
                </a>
                <ol
                  class="mt-4"
                >
                  <li
                    class="
              mb-4 ml-1 font-sans text-xs tracking-wider text-inverse-subtle
              uppercase
              last:mb-0
            "
                  >
                    <a
                      class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                      href="/watchlist/progress/"
                    >
                      Progress
                    </a>
                  </li>
                </ol>
              </li>
            </ul>
          </nav>
        </div>
      </header>
      <main
        class="grow 
        bg-subtle
        
      "
        id="content"
      >
        <div
          data-testid="backdrop"
        >
          Test Backdrop
        </div>
        <div
          class="group/list-with-filters mx-auto bg-subtle"
        >
          <div
            class="
            sticky top-[calc(0px_+_var(--scroll-offset,0px))] z-sticky
            scroll-mt-[calc(0px_+__var(--scroll-offset,0px))] border-b
            border-default bg-default text-xs
            tablet:col-span-full
          "
          >
            <div
              class="
        mx-auto grid max-w-[var(--breakpoint-desktop)]
        grid-cols-[auto_auto_1fr_auto] items-baseline gap-y-7 px-container py-10
        font-sans font-medium tracking-wide text-subtle uppercase
        tablet:grid-cols-[auto_auto_1fr_auto_auto] tablet:gap-x-4
        tablet-landscape:grid-cols-[auto_auto_1fr_minmax(302px,calc(33%_-_192px))_auto]
        desktop:grid-cols-[auto_auto_1fr_calc(33%_-_96px)_auto]
      "
            >
              <span
                class="text-nowrap"
              >
                <span
                  class="font-semibold text-default"
                >
                  100
                </span>
                <span
                  class="text-xxs leading-none tracking-wide"
                >
                   Results
                </span>
              </span>
              <div
                class=""
              />
              <div
                class="
          col-span-full
          tablet:col-span-1 tablet:col-start-4
          desktop:pl-8
        "
              >
                <label
                  class="
            flex items-baseline gap-x-4 text-xxs font-semibold tracking-wide
            text-subtle
          "
                >
                  Sort 
                  <select
                    class="
              flex w-full appearance-none border-none bg-default py-2 pr-4 pl-4
              font-serif text-base font-normal tracking-normal overflow-ellipsis
              text-default shadow-all outline-accent
            "
                  >
                    <option
                      value="title-asc"
                    >
                      Title (A → Z)
                    </option>
                    <option
                      value="title-desc"
                    >
                      Title (Z → A)
                    </option>
                  </select>
                </label>
              </div>
              <button
                aria-controls="filters"
                aria-expanded="false"
                aria-label="Toggle filters"
                class="
          col-start-4 row-start-1 flex transform-gpu cursor-pointer items-center
          justify-center gap-x-4 bg-canvas px-4 py-2 text-nowrap text-muted
          uppercase shadow-all transition-transform
          hover:scale-110
          tablet:col-start-5 tablet:w-20
        "
                type="button"
              >
                Filter
              </button>
            </div>
          </div>
          <div
            class="
            mx-auto max-w-[var(--breakpoint-desktop)]
            gap-x-[var(--container-padding)]
            tablet:px-container
            tablet-landscape:flex
          "
          >
            <div
              class="
              mx-auto max-w-[var(--breakpoint-desktop)] grow
              scroll-mt-[calc(181px_+_var(--scroll-offset,0))] pb-10
              tablet:scroll-mt-[calc(121px_+_var(--scroll-offset,0px))]
            "
              id="list"
            >
              <div
                data-testid="list"
              >
                Test List Content
              </div>
            </div>
            <div
              aria-hidden="true"
              class="
              invisible fixed inset-0 bg-[rgba(0,0,0,.4)] opacity-0
              transition-opacity duration-200
              tablet-landscape:hidden
              
            "
            />
            <div
              aria-label="Filters"
              class="
              fixed top-0 right-0 z-filter-drawer flex h-full max-w-[380px]
              flex-col items-start gap-y-5 bg-default text-left text-inverse
              duration-200 ease-in-out
              w-0 transform-[translateX(100%)] overflow-y-hidden
              tablet:gap-y-10
              tablet-landscape:relative tablet-landscape:z-auto
              tablet-landscape:col-start-4 tablet-landscape:block
              tablet-landscape:w-auto tablet-landscape:max-w-unset
              tablet-landscape:min-w-[320px] tablet-landscape:transform-none
              tablet-landscape:scroll-mt-[calc(25px_+_var(--scroll-offset,0px))]
              tablet-landscape:overflow-y-visible tablet-landscape:bg-inherit
              tablet-landscape:py-24 tablet-landscape:pb-12
              tablet-landscape:drop-shadow-none
              laptop:w-[33%]
            "
              id="filters"
            >
              <div
                class="
                flex h-full w-full flex-col text-sm
                tablet:pt-12 tablet:text-base
                tablet-landscape:h-auto tablet-landscape:overflow-visible
                tablet-landscape:bg-default tablet-landscape:px-container
                tablet-landscape:pt-0
                laptop:px-8
              "
              >
                <fieldset
                  class="
                  flex grow flex-col gap-5 px-container pb-4
                  tablet:gap-8
                  tablet-landscape:mt-0 tablet-landscape:gap-12
                  tablet-landscape:px-0 tablet-landscape:py-10
                "
                >
                  <legend
                    class="
                    mb-5 block w-full pt-4 pb-4 text-lg text-subtle
                    shadow-bottom
                    tablet-landscape:mb-0 tablet-landscape:pt-10
                    tablet-landscape:pb-8 tablet-landscape:font-sans
                    tablet-landscape:text-xxs tablet-landscape:font-semibold
                    tablet-landscape:tracking-wide tablet-landscape:uppercase
                  "
                  >
                    Filter
                  </legend>
                  <div
                    data-testid="filters-content"
                  >
                    <input
                      placeholder="Filter input"
                      type="text"
                    />
                    <button
                      type="button"
                    >
                      Filter button
                    </button>
                  </div>
                </fieldset>
                <div
                  class="
                  sticky bottom-0 z-filter-footer mt-auto w-full self-end
                  border-t border-t-default bg-default px-8 py-4 drop-shadow-2xl
                  tablet-landscape:hidden
                "
                >
                  <button
                    class="
                    flex w-full cursor-pointer items-center justify-center
                    gap-x-4 bg-footer px-4 py-3 font-sans text-xs text-nowrap
                    text-inverse uppercase
                    tablet-landscape:hidden
                  "
                    type="button"
                  >
                    View 100 Results
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <footer
        class="bg-footer text-inverse"
      >
        <div
          class="mx-auto max-w-(--breakpoint-laptop) px-container py-20"
        >
          <div
            class="
            flex w-full flex-col
            tablet:flex-row-reverse tablet:justify-between
          "
          >
            <a
              class="
              mx-auto mb-8 w-full max-w-button bg-canvas py-5 text-center
              font-sans text-xs tracking-wide text-default uppercase
              transition-all
              hover:scale-105 hover:bg-inverse hover:text-inverse
              tablet:mx-0
            "
              href="#top"
            >
              To the top
            </a>
            <div
              class="
        flex transform-gpu flex-col transition-transform
        has-[a:hover]:scale-105
        
      "
            >
              <div
                class="
          text-[1.375rem] leading-8 font-normal whitespace-nowrap
          tablet:text-[1.5625rem]
        "
              >
                <a
                  href="/"
                >
                  Frank's Movie Log
                </a>
              </div>
              <p
                class="w-full pl-px text-sm leading-4 italic opacity-85"
              >
                by Frank Showalter
              </p>
            </div>
          </div>
          <div
            class="
            justify-between
            tablet:flex
          "
          >
            <div
              class="
              flex max-w-[640px] flex-col pb-12
              tablet:pr-32
            "
            >
              <div
                class="
                pt-10 font-sans text-sm font-light text-inverse-subtle
              "
              >
                <p
                  class="
                  mb-6 text-pretty
                  first-letter:float-left first-letter:mt-[6px]
                  first-letter:pr-1 first-letter:font-sans
                  first-letter:text-[40px] first-letter:leading-[.8]
                  first-letter:font-bold first-letter:text-inverse
                "
                >
                  Hi there, I'm Frank, a husband and father old enough to have sat wide-eyed during 
                  <em>
                    E.T
                  </em>
                  's first theatrical run, I've been watching, absorbing, and dissecting films ever since.
                </p>
                <p
                  class="mb-6 text-pretty"
                >
                  This site began in 2003 when I realized two things: I had become the designated “movie guy” among my friends (you know, the one everyone asks about every new release), and I was frequently experiencing the peculiar déjà vu of realizing, halfway through a film, that I'd already seen it. Clearly, I needed a system.
                </p>
                <p
                  class="mb-6 text-pretty"
                >
                  What began as personal record-keeping evolved into this little corner of the internet where I share my thoughts on everything from blockbusters to obscure indies that deserved better.
                </p>
                <p
                  class="mb-6 text-pretty"
                >
                  New visitors might want to start by reading about 
                  <a
                    class="
        underline
        hover:text-inverse
      "
                    href="/how-i-grade/"
                  >
                    how I grade
                  </a>
                   films. After that, feel free to browse 
                  <a
                    class="
        underline
        hover:text-inverse
      "
                    href="/reviews/"
                  >
                    my reviews
                  </a>
                  . If you're looking for something that flew under the radar but deserves your attention, I recommend my 
                  <a
                    class="
        underline
        hover:text-inverse
      "
                    href="/reviews/underseen/"
                  >
                    underseen gems
                  </a>
                   section. Or, for those moments when you want to feel righteously contrarian, I maintain an list of 
                  <a
                    class="
        underline
        hover:text-inverse
      "
                    href="/reviews/overrated/"
                  >
                    overrated disappointments
                  </a>
                  .
                </p>
                <p
                  class="mb-6 text-pretty"
                >
                  I also keep a 
                  <a
                    class="
        underline
        hover:text-inverse
      "
                    href="/viewings/"
                  >
                    viewing log
                  </a>
                   that tracks everything I watch, whether it gets a full review or not, complete with 
                  <a
                    class="
        underline
        hover:text-inverse
      "
                    href="/viewings/stats/"
                  >
                    stats
                  </a>
                  . In an age of endless content, sometimes the act of remembering what we've seen becomes as important as the seeing itself.
                </p>
                <p
                  class="mb-6 text-pretty"
                >
                  And finally, if you're curious about what's on my critical horizon, 
                  <a
                    class="
        underline
        hover:text-inverse
      "
                    href="/watchlist/"
                  >
                    my watchlist
                  </a>
                   details the films I plan to review and why they've caught my interest.
                </p>
                <p
                  class="text-pretty"
                >
                  In an era of algorithmic recommendations and corporate marketing machines, consider this site a human alternative—one person's attempt to catalog the vast ocean of cinema and maybe help a few fellow travelers along the way.
                </p>
              </div>
            </div>
            <div
              class="
              flex grow-0 flex-col gap-20 pt-10 pb-20
              tablet:basis-button tablet:pr-10
            "
            >
              <ul
                class="
                flex w-full flex-col gap-y-10 text-inverse
                desktop:w-auto
              "
              >
                <li
                  class="block w-1/2 text-2xl whitespace-nowrap"
                >
                  <a
                    class="
          inline-block origin-left transform-gpu transition-transform
          hover:scale-105
        "
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="block w-1/2 text-2xl whitespace-nowrap"
                >
                  <a
                    class="
          inline-block origin-left transform-gpu transition-transform
          hover:scale-105
        "
                    href="/how-i-grade/"
                  >
                    How I Grade
                  </a>
                </li>
                <li
                  class="block w-1/2 text-2xl whitespace-nowrap"
                >
                  <a
                    class="
          inline-block origin-left transform-gpu transition-transform
          hover:scale-105
        "
                    href="/reviews/"
                  >
                    Reviews
                  </a>
                  <ol
                    class="mt-4"
                  >
                    <li
                      class="
              mb-4 ml-1 font-sans text-xs tracking-wide text-inverse-subtle
              uppercase
              last:mb-0
            "
                    >
                      <a
                        class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                        href="/cast-and-crew/"
                      >
                        Cast & Crew
                      </a>
                    </li>
                    <li
                      class="
              mb-4 ml-1 font-sans text-xs tracking-wide text-inverse-subtle
              uppercase
              last:mb-0
            "
                    >
                      <a
                        class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                        href="/collections/"
                      >
                        Collections
                      </a>
                    </li>
                    <li
                      class="
              mb-4 ml-1 font-sans text-xs tracking-wide text-inverse-subtle
              uppercase
              last:mb-0
            "
                    >
                      <a
                        class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                        href="/reviews/overrated/"
                      >
                        Overrated
                      </a>
                    </li>
                    <li
                      class="
              mb-4 ml-1 font-sans text-xs tracking-wide text-inverse-subtle
              uppercase
              last:mb-0
            "
                    >
                      <a
                        class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                        href="/reviews/underrated/"
                      >
                        Underrated
                      </a>
                    </li>
                    <li
                      class="
              mb-4 ml-1 font-sans text-xs tracking-wide text-inverse-subtle
              uppercase
              last:mb-0
            "
                    >
                      <a
                        class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                        href="/reviews/underseen/"
                      >
                        Underseen
                      </a>
                    </li>
                  </ol>
                </li>
                <li
                  class="block w-1/2 text-2xl whitespace-nowrap"
                >
                  <a
                    class="
          inline-block origin-left transform-gpu transition-transform
          hover:scale-105
        "
                    href="/viewings/"
                  >
                    Viewing Log
                  </a>
                  <ol
                    class="mt-4"
                  >
                    <li
                      class="
              mb-4 ml-1 font-sans text-xs tracking-wide text-inverse-subtle
              uppercase
              last:mb-0
            "
                    >
                      <a
                        class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                        href="/viewings/stats/"
                      >
                        Stats
                      </a>
                    </li>
                  </ol>
                </li>
                <li
                  class="block w-1/2 text-2xl whitespace-nowrap"
                >
                  <a
                    class="
          inline-block origin-left transform-gpu transition-transform
          hover:scale-105
        "
                    href="/watchlist/"
                  >
                    Watchlist
                  </a>
                  <ol
                    class="mt-4"
                  >
                    <li
                      class="
              mb-4 ml-1 font-sans text-xs tracking-wide text-inverse-subtle
              uppercase
              last:mb-0
            "
                    >
                      <a
                        class="
                inline-block origin-left transform-gpu transition-all
                hover:scale-105 hover:text-inverse
              "
                        href="/watchlist/progress/"
                      >
                        Progress
                      </a>
                    </li>
                  </ol>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <p
          class="
          w-full bg-canvas px-container py-10 text-center leading-5 font-normal
          text-default
        "
        >
          All reviews by Frank Showalter. All images used in accordance with the 
          <a
            class="text-inherit underline"
            href="http://www.copyright.gov/title17/92chap1.html#107"
            rel="nofollow"
          >
            Fair Use Law
          </a>
          .
        </p>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListWithFiltersLayout > when on mobile > opens and closes filter drawer 1`] = `
<div
  aria-label="Filters"
  class="
              fixed top-0 right-0 z-filter-drawer flex h-full max-w-[380px]
              flex-col items-start gap-y-5 bg-default text-left text-inverse
              duration-200 ease-in-out
              w-0 transform-[translateX(100%)] overflow-y-hidden
              tablet:gap-y-10
              tablet-landscape:relative tablet-landscape:z-auto
              tablet-landscape:col-start-4 tablet-landscape:block
              tablet-landscape:w-auto tablet-landscape:max-w-unset
              tablet-landscape:min-w-[320px] tablet-landscape:transform-none
              tablet-landscape:scroll-mt-[calc(25px_+_var(--scroll-offset,0px))]
              tablet-landscape:overflow-y-visible tablet-landscape:bg-inherit
              tablet-landscape:py-24 tablet-landscape:pb-12
              tablet-landscape:drop-shadow-none
              laptop:w-[33%]
            "
  id="filters"
>
  <div
    class="
                flex h-full w-full flex-col text-sm
                tablet:pt-12 tablet:text-base
                tablet-landscape:h-auto tablet-landscape:overflow-visible
                tablet-landscape:bg-default tablet-landscape:px-container
                tablet-landscape:pt-0
                laptop:px-8
              "
  >
    <fieldset
      class="
                  flex grow flex-col gap-5 px-container pb-4
                  tablet:gap-8
                  tablet-landscape:mt-0 tablet-landscape:gap-12
                  tablet-landscape:px-0 tablet-landscape:py-10
                "
    >
      <legend
        class="
                    mb-5 block w-full pt-4 pb-4 text-lg text-subtle
                    shadow-bottom
                    tablet-landscape:mb-0 tablet-landscape:pt-10
                    tablet-landscape:pb-8 tablet-landscape:font-sans
                    tablet-landscape:text-xxs tablet-landscape:font-semibold
                    tablet-landscape:tracking-wide tablet-landscape:uppercase
                  "
      >
        Filter
      </legend>
      <div
        data-testid="filters-content"
      >
        <input
          placeholder="Filter input"
          type="text"
        />
        <button
          type="button"
        >
          Filter button
        </button>
      </div>
    </fieldset>
    <div
      class="
                  sticky bottom-0 z-filter-footer mt-auto w-full self-end
                  border-t border-t-default bg-default px-8 py-4 drop-shadow-2xl
                  tablet-landscape:hidden
                "
    >
      <button
        class="
                    flex w-full cursor-pointer items-center justify-center
                    gap-x-4 bg-footer px-4 py-3 font-sans text-xs text-nowrap
                    text-inverse uppercase
                    tablet-landscape:hidden
                  "
        type="button"
      >
        View 
        100
         Results
      </button>
    </div>
  </div>
</div>
`;

exports[`ListWithFiltersLayout > when on mobile > opens and closes filter drawer 2`] = `
<div
  aria-label="Filters"
  class="
              fixed top-0 right-0 z-filter-drawer flex h-full max-w-[380px]
              flex-col items-start gap-y-5 bg-default text-left text-inverse
              duration-200 ease-in-out
              
                    bottom-0 w-full transform-[translateX(0)] overflow-y-auto
                    drop-shadow-2xl
                  
              tablet:gap-y-10
              tablet-landscape:relative tablet-landscape:z-auto
              tablet-landscape:col-start-4 tablet-landscape:block
              tablet-landscape:w-auto tablet-landscape:max-w-unset
              tablet-landscape:min-w-[320px] tablet-landscape:transform-none
              tablet-landscape:scroll-mt-[calc(25px_+_var(--scroll-offset,0px))]
              tablet-landscape:overflow-y-visible tablet-landscape:bg-inherit
              tablet-landscape:py-24 tablet-landscape:pb-12
              tablet-landscape:drop-shadow-none
              laptop:w-[33%]
            "
  id="filters"
>
  <div
    class="
                flex h-full w-full flex-col text-sm
                tablet:pt-12 tablet:text-base
                tablet-landscape:h-auto tablet-landscape:overflow-visible
                tablet-landscape:bg-default tablet-landscape:px-container
                tablet-landscape:pt-0
                laptop:px-8
              "
  >
    <fieldset
      class="
                  flex grow flex-col gap-5 px-container pb-4
                  tablet:gap-8
                  tablet-landscape:mt-0 tablet-landscape:gap-12
                  tablet-landscape:px-0 tablet-landscape:py-10
                "
    >
      <legend
        class="
                    mb-5 block w-full pt-4 pb-4 text-lg text-subtle
                    shadow-bottom
                    tablet-landscape:mb-0 tablet-landscape:pt-10
                    tablet-landscape:pb-8 tablet-landscape:font-sans
                    tablet-landscape:text-xxs tablet-landscape:font-semibold
                    tablet-landscape:tracking-wide tablet-landscape:uppercase
                  "
      >
        Filter
      </legend>
      <div
        data-testid="filters-content"
      >
        <input
          placeholder="Filter input"
          type="text"
        />
        <button
          type="button"
        >
          Filter button
        </button>
      </div>
    </fieldset>
    <div
      class="
                  sticky bottom-0 z-filter-footer mt-auto w-full self-end
                  border-t border-t-default bg-default px-8 py-4 drop-shadow-2xl
                  tablet-landscape:hidden
                "
    >
      <button
        class="
                    flex w-full cursor-pointer items-center justify-center
                    gap-x-4 bg-footer px-4 py-3 font-sans text-xs text-nowrap
                    text-inverse uppercase
                    tablet-landscape:hidden
                  "
        type="button"
      >
        View 
        100
         Results
      </button>
    </div>
  </div>
</div>
`;
